@@ -378,12 +378,6 @@ static void	hk_history_item_update(zbx_hk_history_rule_t *rule, int now, zbx_uin
  * Parameters: rule  - [IN/OUT] the history housekeeping rule                 *
  *             now   - [IN] the current timestamp                             *
  *                                                                            *
- * Author: Andris Zeila                                                       *
- *                                                                            *
- * Comments: This function is called to release resources allocated by        *
- *           history housekeeping rule after housekeeping was disabled        *
- *           for the table referred by this rule.                             *
- *                                                                            *
  ******************************************************************************/
 static void	hk_history_update(zbx_hk_history_rule_t *rules, int now)
 {
@@ -394,8 +388,10 @@ static void	hk_history_update(zbx_hk_history_rule_t *rules, int now)
 	result = DBselect(
 			"select i.itemid,i.value_type,i.history,i.trends,h.hostid"
 			" from items i,hosts h"
-			" where i.hostid=h.hostid"
+			" where i.flags in (%d,%d)"
+				" and i.hostid=h.hostid"
 				" and h.status in (%d,%d)",
+			ZBX_FLAG_DISCOVERY_NORMAL, ZBX_FLAG_DISCOVERY_CREATED,
 			HOST_STATUS_MONITORED, HOST_STATUS_NOT_MONITORED);
 
 	while (NULL != (row = DBfetch(result)))
