@@ -3,6 +3,7 @@ Changes for 3.4.14rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-14778] fixed housekeeper attempting to remove history of discovery rules/prototypes (wiper)
 .......PS. [ZBX-14771] fixed memory leak in poller if scheduling interval is invalid (vso)
 .......PS. [ZBX-14775] fixed configuration of the maximum available count of aggregated metrics in a single request to vmware vCenter (MVekslers)
 ..F....... [ZBX-14676] fixed displaying links containing UTF-8 characters (Ivo)
@@ -1339,6 +1340,7 @@ Changes for 3.0.22rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-14778] fixed housekeeper attempting to remove history of discovery rules/prototypes (wiper)
 .......PS. [ZBX-14775] fixed configuration of the maximum available count of aggregated metrics in a single request to vmware vCenter (MVekslers)
 ..F....... [ZBX-14676] fixed displaying links containing UTF-8 characters (Ivo)
 
